<resources>
    <string name="app_name">Simple Flickr</string>
    <string name="flickr">Flickr</string>
    <string name="comments">Comentários</string>
    <string name="loading">Carregando</string>
    <string name="no_internet">É preciso internet para usar o Simple Flickr.</string>
    <string name="no_comments">Sem comentários. =(</string>
    <string name="populars">Populares</string>
    <string name="news">Recentes</string>
    <string name="refresh">Atualizar</string>
    <string name="need_internet_to_see_photos">Você precisa de internet para ver essa foto. =(</string>
</resources>
