<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="3dp"
    app:cardElevation="15sp"
    android:layout_margin="5dp">

    <ImageView
        android:id="@+id/image_photo"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:adjustViewBounds="true"
        android:scaleType="centerCrop" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:layout_gravity="bottom"
        android:background="@color/gray_comments">

        <TextView
            android:id="@+id/text_photo_information"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:singleLine="true"
            android:gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:textSize="15sp"
            android:maxLines="1"
            android:textColor="@android:color/white"/>

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/layout_loading"
        android:layout_width="match_parent"
        android:background="@color/loading_background"
        android:visibility="gone"
        android:layout_height="match_parent">
        <ProgressBar
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:indeterminate="true"/>
    </LinearLayout>

</android.support.v7.widget.CardView>

