<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/swipe_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

        <include layout="@layout/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <com.malinskiy.superrecyclerview.SuperRecyclerView
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/list"
            android:scrollbars="vertical"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            app:layout_empty="@layout/empty_view"
            app:layout_moreProgress="@layout/more_progress"
            app:mainLayoutId="@layout/layout_recyclerview_verticalscroll"
            android:layout_below="@+id/toolbar"/>

        <LinearLayout
            android:id="@+id/layout_empty_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:visibility="gone"
            android:gravity="center"
            android:layout_below="@+id/toolbar">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no_internet"
                android:gravity="center"/>

            <ImageView
                android:id="@+id/image_refresh"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:src="@mipmap/ic_refresh"/>
        </LinearLayout>

    </RelativeLayout>
</LinearLayout>



